# django-cypress

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-docs.txt  requirements-publish.txt  requirements-tests.txt  requirements.txt  run_tests.py  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
django_cypress/: __init__.py  urls.py  views.py
django_cypress/management/: __init__.py
django_cypress/management/commands/: cypress_boilerplate.py
django_cypress/stubs/cypress/e2e/: example.cy.js
django_cypress/stubs/cypress/support/: commands.js  index.d.ts
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/commands/: createUser.md  manage.md  migrate.md  refreshDatabase.md
example/: README.md  cypress.config.js  manage.py  package-lock.json  package.json
example-skeleton/: pyproject.toml
example-skeleton/example/config/: asgi.py  settings.py  urls.py  wsgi.py
example/cypress/e2e/: example.cy.js
example/cypress/support/: commands.js  index.d.ts
example/example/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
tests/: __init__.py  test_settings.py  tests.py  urls.py
