[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Sofia Tsivoula <stsivoula@helloworld.gr>"]
readme = "README.md"
packages = [{include = "poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
djangorestframework = "^3.14.0"
drf-yasg = "==1.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
